src/runners/snapshots/elelemer__runners__ollama__tests__ollama_stream_chunk_deserialises_content_stream_message.snap
---
source: src/runners/ollama.rs
expression: chunk
---
{
  "choices": [
    {
      "finish_reason": null,
      "delta": {
        "content": " task"
      }
    }
  ],
  "model": "phi4-mini:3.8b",
  "system_fingerprint": "fp_ollama",
  "object": "chat.completion.chunk",
  "usage": null
}
