src/runners/snapshots/elelemer__runners__ollama__tests__ollama_stream_chunk_deserialises_usage_stream_message.snap
---
source: src/runners/ollama.rs
expression: chunk
---
{
  "choices": [],
  "model": "qwen3-vl:8b",
  "system_fingerprint": "fp_ollama",
  "object": "chat.completion.chunk",
  "usage": {
    "prompt_tokens": 29,
    "completion_tokens": 253
  }
}
